--- a/smoothie/package.json
+++ b/smoothie/package.json
@@ -2,6 +2,7 @@
   "name": "smoothie",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,11 +18,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2",
-    "typescript": "^5"
+    "eslint-config-next": "15.0.2"
   }
 }
